Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-73795

wasm: building app fails with SIMD error

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.12.2, 5.12.3, 5.13.0
    • 5.13.0 Alpha 1
    • QPA
    • None
    • WebAssembly
    • 44b91a619d14932635e9a3fe155de4df9f98a25c (qt/qtbase/5.12)

    Description

      When building an app, I get the error:

       

      emscripten.py", line 227, in compiler_glue
      assert not (metadata['simd'] and shared.Settings.WASM), 'SIMD is used, but not supported in WASM mode yet'
      AssertionError: SIMD is used, but not supported in WASM mode yet

       

      I have tracked it down to the commit:

      02280535be Update bundled Freetype to 2.9.1

       

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            lpotter Lorn Potter
            lpotter Lorn Potter
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes