wasm: fix building examples and applications

This fixes a bug where app build would fail with AssertionError: SIMD is
used, but not supported in WASM mode yet

Change-Id: I27d5eb00b2c869b890dc519a7a793b7f87aeb9d2
Fixes: QTBUG-73795
Reviewed-by: Morten Johan Sørvig <morten.sorvig@qt.io>